# OpenVAFT

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: OVAFTAllocator.cpp  OVAFTAllocator.h  OVAFTFaceTracker.cpp  OVAFTFaceTracker.h  OVAFTGLWidget.cpp  OVAFTGLWidget.h  OVAFTLive2DManager.cpp  OVAFTLive2DManager.h  OVAFTMain.cpp  OVAFTMainWindow.cpp  OVAFTMainWindow.h  OVAFTModel.cpp  OVAFTModel.h  OVAFTSprite.cpp  OVAFTSprite.h  OVAFTTextureManager.cpp  OVAFTTextureManager.h  OVAFTUtility.cpp  OVAFTUtility.h  OVAFTView.cpp  OVAFTView.h
